# typist

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: Cargo.toml  README.md
backend/src/: commands.rs  errors.rs  lib.rs  main.rs  models.rs  state.rs
backend/src/services/: diagnostics_service.rs  export_service.rs  file_service.rs  image_service.rs  mod.rs  plugin_service.rs  recent_service.rs  recovery_service.rs  search_service.rs  update_service.rs  workspace_service.rs
docs/: PLUGIN_BUILD.md  PRD.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/commands/: definitions.ts  windowActions.ts
frontend/src/components/: Editor.tsx  ExportModal.tsx  FileTree.tsx  FindReplacePanel.tsx  GlobalSearchPanel.tsx  KeybindingModal.tsx  KeybindingPane.tsx  PluginManager.tsx  PluginsPane.tsx  PreferencesModal.tsx  RecoveryModal.tsx  SettingsModal.tsx  SettingsPane.tsx  Sidebar.tsx  TabsBar.tsx  Titlebar.tsx  UnsavedClosePrompt.tsx  UpdaterModal.tsx
frontend/src/context/: PluginSlots.tsx
frontend/src/hooks/: useShortcuts.ts
frontend/src/i18n/: index.ts
frontend/src/plugins/base/: advancedRender.ts  wordCount.ts
frontend/src/sdk/: TypistAPI.ts
frontend/src/store/: index.ts
frontend/src/workers/: pluginSandboxWorker.ts
src-tauri/: 2  Cargo.lock.bak  Cargo.toml  package-lock.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
