[package]
name = "typist-backend"
version = "0.1.0"
edition = "2021"

[features]
default = []
tauri-integration = ["dep:tauri"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pulldown-cmark = "0.13"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "2", optional = true }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
